Fixed project banner width on Firefox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,6 +86,8 @@ main {
 .project {
   position: relative;
   color: white;
+  width: 100%;
+
 }
 
 .project .banner {
